--- a/project/CTeModel/pom.xml
+++ b/project/CTeModel/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.midiadev.sefaz</groupId>
 	<artifactId>CTeModel</artifactId>
-	<version>2.00a</version>
+	<version>2.00a_NT2015.001</version>
 	<packaging>jar</packaging>
 
 	<properties>
