--- a/project/CTeModel/pom.xml
+++ b/project/CTeModel/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.midiadev.sefaz</groupId>
 	<artifactId>CTeModel</artifactId>
-	<version>3.00_24-11-2016</version>
+	<version>3.00_WS_Dist_DFe</version>
 	<packaging>jar</packaging>
 
 	<properties>
